gif's and color gray

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="style.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>      
-		<!--<link rel="apple-touch-icon" href=".png">-->
+		<!--<link rel="apple-touch-icon" href=".gif">-->
         <!--<link rel="shortcut icon" href=".ico">-->
     </head>
     <body>	
@@ -45,8 +45,8 @@
 	
 	<div class="container">
 	<div class="row">
-		<img style="height: auto; width: 100%;" src="img/header.png" alt="Header">
-		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.png" alt="Avatart Header">
+		<img style="height: auto; width: 100%;" src="img/header.gif" alt="Header">
+		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.gif" alt="Avatart Header">
 	</div>
 	</div>
 	
@@ -68,7 +68,7 @@
 	
 	<div class="container centerLayer" style="margin-bottom: 100px;">
 	<div class="row">
-	<div class="google-plus social-slide"></div>	<div class="twitter social-slide"></div>	<div class="instagram social-slide"></div>	<div class="youtube social-slide"></div>	<div class="vk social-slide"></div>
+	<a href="https://plus.google.com/u/0/112524692934876846449"><div class="google-plus social-slide"></div></a>	<a href="https://twitter.com/MaxCriser"><div class="twitter social-slide"></div></a>	<a href="https://www.instagram.com/thecriser/"><div class="instagram social-slide"></div></a>	<a href="https://www.youtube.com/channel/UC9Ryfyfp95ZFy-LaChPmEaw"><div class="youtube social-slide"></div></a>	<a href="https://vk.com/i.macs"><div class="vk social-slide"></div></a>
 	</div>
 	</div>
 	<div id="id-location" class="container"  style="background-color: #f3f3f5; padding-top: 50px; padding-bottom: 70px;">
@@ -111,7 +111,7 @@ var marker = new google.maps.Marker({
 	
 	<div class="container"  id="hire-me">
 	<div class="row">
-			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.png" alt="Line">
+			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.gif" alt="Line">
 		
 			<p class="hire-text" style="font-size: 24px; color: #fff; background-color: #2f3238; padding: 16px;">
 			Max Zakharenko</p><br>
