--- a/projects.html
+++ b/projects.html
@@ -44,8 +44,8 @@
 	
 	<div class="container" style="background-color: #f3f3f5;">
 	<div class="row">
-		<img style="height: auto; width: 100%;" src="img/header.png" alt="Header">
-		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.png" alt="Avatart Header">
+		<img style="height: auto; width: 100%;" src="img/header.gif" alt="Header">
+		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.gif" alt="Avatart Header">
 	</div>
 	</div>
 
@@ -62,7 +62,7 @@
 	<!--content-->
 	
 	<div class="container-hover">
-		<img src="img/ck-project.png" alt="Avatar" class="image-hover shadow" style="width:100%">
+		<img src="img/ck-project.gif" alt="Avatar" class="image-hover shadow" style="width:100%">
 		<div class="middle-hover">
 		<div class="text-hover">
 		CKeeper
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 	<div class="container-hover">
-		<img src="img/noimage.png" alt="Avatar" class="image-hover shadow" style="width:100%">
+		<img src="img/noimage.gif" alt="Avatar" class="image-hover shadow" style="width:100%">
 		<div class="middle-hover">
 		<div class="text-hover">
 		Name
@@ -80,7 +80,7 @@
 		</div>
 	</div>
 	<div class="container-hover">
-		<img src="img/noimage.png" alt="Avatar" class="image-hover shadow" style="width:100%">
+		<img src="img/noimage.gif" alt="Avatar" class="image-hover shadow" style="width:100%">
 		<div class="middle-hover">
 		<div class="text-hover">
 		Name
@@ -94,7 +94,7 @@
 	
 	<div class="container"  id="hire-me">
 	<div class="row">
-			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.png" alt="Line">
+			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.gif" alt="Line">
 		
 			<p style="font-size: 24px; color: #fff; background-color: #2f3238; padding: 16px;">
 			Max Zakharenko</p><br>
