--- a/skills.html
+++ b/skills.html
@@ -47,8 +47,8 @@
 	
 	<div class="container" style="background-color: #f3f3f5;">
 	<div class="row">
-		<img style="height: auto; width: 100%;" src="img/header.png" alt="Header">
-		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.png" alt="Avatart Header">
+		<img style="height: auto; width: 100%;" src="img/header.gif" alt="Header">
+		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.gif" alt="Avatart Header">
 	</div>
 	</div>
 
@@ -280,7 +280,7 @@
 		
 	<div class="container"  id="hire-me">
 	<div class="row">
-			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.png" alt="Line">
+			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.gif" alt="Line">
 		
 			<p style="font-size: 24px; color: #fff; background-color: #2f3238; padding: 16px;">
 			Max Zakharenko</p><br>
