--- a/education.html
+++ b/education.html
@@ -44,8 +44,8 @@
 	
 	<div class="container" style="background-color: #f3f3f5;">
 	<div class="row">
-		<img style="height: auto; width: 100%;" src="img/header.png" alt="Header">
-		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.png" alt="Avatart Header">
+		<img style="height: auto; width: 100%;" src="img/header.gif" alt="Header">
+		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.gif" alt="Avatart Header">
 	</div>
 	</div>
 	
@@ -59,14 +59,14 @@
 	<div class="container" style="margin-top: 50px; margin-left: -30%;">
 	<div class="column">
 		
-		<div align="right"><img style="width: 48px; height: 48px;" src="img/lamp.png" alt="school"> </div>
+		<div align="right"><img style="width: 48px; height: 48px;" src="img/lamp.gif" alt="school"> </div>
 	
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Secondary school number 27 </p>
-		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.png" alt="school">Belarus, Grodno</p>
+		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Belarus, Grodno</p>
 		</p>
 
-		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.png" alt="school">September 2004 - May 2015</p>
+		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">September 2004 - May 2015</p>
 			
 	</div>
 	</div>
@@ -75,13 +75,13 @@
 	<div class="container" style="margin-top: 20px; margin-left: -30%;">
 	<div class="column">
 		
-		<div align="right"><img style="width: 48px; height: 48px;" src="img/lamp.png" alt="school"> </div>
+		<div align="right"><img style="width: 48px; height: 48px;" src="img/lamp.gif" alt="school"> </div>
 	
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Grodno State University </p>
-		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.png" alt="school">Belarus, Grodno</p>
+		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Belarus, Grodno</p>
 		</p>
-		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.png" alt="school">September 2015 - Present</p>
+		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">September 2015 - Present</p>
 	</div>
 	</div>
 	<hr class="margin-hr">
@@ -89,19 +89,19 @@
 		<div class="container" style="margin-top: 20px; margin-left: -30%;">
 	<div class="column">
 		
-		<div align="right"><img style="width: 48px; height: 48px;" src="img/lamp.png" alt="school"> </div>
+		<div align="right"><img style="width: 48px; height: 48px;" src="img/lamp.gif" alt="school"> </div>
 	
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Epam Systems android development courses</p>
-		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.png" alt="school">Belarus, Grodno</p>
+		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Belarus, Grodno</p>
 		</p>
-		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.png" alt="school">September 2016 - February 2016</p>
+		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">September 2016 - February 2016</p>
 	</div>
 	</div>
 	
 	<div class="container"  id="hire-me">
 	<div class="row">
-			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.png" alt="Line">
+			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.gif" alt="Line">
 		
 			<p style="font-size: 24px; color: #fff; background-color: #2f3238; padding: 16px;">
 			Max Zakharenko</p><br>
