--- a/work.html
+++ b/work.html
@@ -43,8 +43,8 @@
 	
 	<div class="container" style="background-color: #f3f3f5;">
 	<div class="row">
-		<img style="height: auto; width: 100%;" src="img/header.png" alt="Header">
-		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.png" alt="Avatart Header">
+		<img style="height: auto; width: 100%;" src="img/header.gif" alt="Header">
+		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.gif" alt="Avatart Header">
 	</div>
 	</div>
 
@@ -58,13 +58,13 @@
 	<div class="container" style="margin-top: 50px; margin-left: -30%;">
 	<div class="column">
 		
-		<div align="right"><img style="width: 48px; height: 48px;" src="img/busy.png" alt="school"> </div>
+		<div align="right"><img style="width: 48px; height: 48px;" src="img/busy.gif" alt="school"> </div>
 
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Place of work </p>
-		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.png" alt="school">Location</p>
+		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Location</p>
 		</p>
-		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.png" alt="school">Beginning - The end</p>
+		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">Beginning - The end</p>
 	</div>
 	</div>
 	<hr class="margin-hr">
@@ -72,19 +72,19 @@
 	<div class="container" style="margin-top: 20px; margin-left: -30%;">
 	<div class="column">
 		
-		<div align="right"><img style="width: 48px; height: 48px;" src="img/busy.png" alt="school"> </div>
+		<div align="right"><img style="width: 48px; height: 48px;" src="img/busy.gif" alt="school"> </div>
 	
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Place of work </p>
-		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.png" alt="school">Location</p>
+		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Location</p>
 		</p>
-		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.png" alt="school">Beginning - The end</p>
+		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">Beginning - The end</p>
 	</div>
 	</div>
 	
 	<div class="container"  id="hire-me">
 	<div class="row">
-			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.png" alt="Line">
+			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.gif" alt="Line">
 		
 			<p style="font-size: 24px; color: #fff; background-color: #2f3238; padding: 16px;">
 			Max Zakharenko</p><br>
