--- a/projects.html
+++ b/projects.html
@@ -44,8 +44,8 @@
 	
 	<div class="container" style="background-color: #f3f3f5;">
 	<div class="row">
-		<img style="height: auto; width: 100%;" src="img/header.gif" alt="Header">
-		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.gif" alt="Avatart Header">
+		<img style="height: auto; width: 100%;" src="img/header.png" alt="Header">
+		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.png" alt="Avatart Header">
 	</div>
 	</div>
 
