--- a/education.html
+++ b/education.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Max Zakharenko personal web page...">
 		<meta name="keywords" content="Max Zakharenko, Max, Zakharenko, web, page, grsu, grodno, belarus, IT, android, c#, c++, java, ckeeper">
 		<meta name="author" content="Max Zakharenko">
-		<link href="style.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 				<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>    
 	
