--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.circliful.js"></script>
 	
-		<link href="style.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>   
 	
     </head>
