--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div class="container">
 	<div class="row">
 		<img style="height: auto; width: 100%;" src="img/header.png" alt="Header">
-		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.png" alt="Avatart Header">
+		<img style="height: auto; width: 14%; margin-top: -7%; margin-left: 43%;" src="img/avatar_header.gif" alt="Avatart Header">
 	</div>
 	</div>
 	
