--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	
 	<div class="container">
 	<div class="row">
-		<h1 class="h1-hi-text" style="margin-top: 6%;">Hi!</h4>
+		<h1 class="h1-hi-text" style="margin-top: 6%;">Hi!</h1>
 	    	<p class="hi-text">My name is Max Zakharenko. I am 19 years old and I was born and live in Belarus.</p>
 	    	<p class="hi-text">
 			In 2015, I graduated from high school 27.<br>
@@ -78,11 +78,7 @@
 	</div>
 	</div>
 	
-	<div class="container" style="margin-bottom: -39px;>
-	<div class="row">
-	
-	
-	<div id="map" style="width: 100%; height:400px;background:yellow"></div>
+	<div id="map" style="margin-bottom: -40px; width: 100%; height:400px;background:yellow"></div>
 
 <script>
 
@@ -105,10 +101,7 @@ var marker = new google.maps.Marker({
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApd5bKj7g7LUkLLPy0Zm44_mkWPagXwWI&callback=myMap"></script>
-   
-	</div>
-	</div>
-	
+  
 	<div class="container"  id="hire-me">
 	<div class="row">
 			<img style="margin-bottom: -30px; height: auto; width: 100%;" src="img/line.gif" alt="Line">
@@ -119,9 +112,8 @@ var marker = new google.maps.Marker({
 			You can get in touch with me 24 hours, 7 days a week.<br><br>
 			<input style="width: 100%; height: 48px; padding-left: 12px; background-color: #27292e; border: 0px;" type="text" placeholder="Name" name="inputName" id="inputName"><br><br>
 			<input style="width: 100%; margin-top: -12px; height: 48px; padding-left: 12px; background-color: #27292e; border: 0px;" type="email" placeholder="Enter email" name="inputEmail" id="inputEmail"><br><br>
-			<input style="width: 100%; margin-top: -12px; height: 92px; padding-left: 12px; background-color: #27292e; border: 0px;" type="message" placeholder="Your Message" name="inputMessage" rows="5" id="inputMessage"></input><br>
+			<input style="width: 100%; margin-top: -12px; height: 92px; padding-left: 12px; background-color: #27292e; border: 0px;" type="message" placeholder="Your Message" name="inputMessage" rows="5" id="inputMessage"><br>
 			<button class="button" style="vertical-align:middle; float: right;"><span>Submit </span></button><br><br><br>
-			</p>
 			</p>
 		
 			<p style="font-size: 12px; padding-left: 10%; color: gray; margin-top: -18px; background-color: #27292e; padding: 16px;">
