--- a/work.html
+++ b/work.html
@@ -63,7 +63,6 @@
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Place of work </p>
 		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Location</p>
-		</p>
 		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">Beginning - The end</p>
 	</div>
 	</div>
@@ -77,7 +76,7 @@
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Place of work </p>
 		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Location</p>
-		</p>
+
 		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">Beginning - The end</p>
 	</div>
 	</div>
@@ -92,9 +91,8 @@
 			You can get in touch with me 24 hours, 7 days a week.<br><br>
 			<input style="width: 100%; height: 48px; padding-left: 12px; background-color: #27292e; border: 0px;" type="text" placeholder="Name" name="inputName" id="inputName"><br><br>
 			<input style="width: 100%; margin-top: -12px; height: 48px; padding-left: 12px; background-color: #27292e; border: 0px;" type="email" placeholder="Enter email" name="inputEmail" id="inputEmail"><br><br>
-			<input style="width: 100%; margin-top: -12px; height: 92px; padding-left: 12px; background-color: #27292e; border: 0px;" type="message" placeholder="Your Message" name="inputMessage" rows="5" id="inputMessage"></input><br>
+			<input style="width: 100%; margin-top: -12px; height: 92px; padding-left: 12px; background-color: #27292e; border: 0px;" type="message" placeholder="Your Message" name="inputMessage" rows="5" id="inputMessage"><br>
 			<button class="button" style="vertical-align:middle; float: right;"><span>Submit </span></button><br><br><br>
-			</p>
 			</p>
 		
 			<p style="font-size: 12px; padding-left: 10%; color: gray; margin-top: -18px; background-color: #27292e; padding: 16px;">
