--- a/education.html
+++ b/education.html
@@ -64,7 +64,6 @@
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Secondary school number 27 </p>
 		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Belarus, Grodno</p>
-		</p>
 
 		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">September 2004 - May 2015</p>
 			
@@ -80,7 +79,6 @@
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Grodno State University </p>
 		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Belarus, Grodno</p>
-		</p>
 		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">September 2015 - Present</p>
 	</div>
 	</div>
@@ -94,7 +92,7 @@
 		<p class="hi-text" style="margin-left: -48px;">
 		<p class="h1-hi-text"> Epam Systems android development courses</p>
 		<p class="hi-text"> <img style="width: 24px; height: 24px; margin-bottom: -5px; margin-right: 4px;" src="img/location.gif" alt="school">Belarus, Grodno</p>
-		</p>
+
 		<p class="hi-text"><img style="width: 24px; height: 24px; margin-bottom: -5px;" src="img/calendar.gif" alt="school">September 2016 - February 2016</p>
 	</div>
 	</div>
@@ -109,9 +107,8 @@
 			You can get in touch with me 24 hours, 7 days a week.<br><br>
 			<input style="width: 100%; height: 48px; padding-left: 12px; background-color: #27292e; border: 0px;" type="text" placeholder="Name" name="inputName" id="inputName"><br><br>
 			<input style="width: 100%; margin-top: -12px; height: 48px; padding-left: 12px; background-color: #27292e; border: 0px;" type="email" placeholder="Enter email" name="inputEmail" id="inputEmail"><br><br>
-			<input style="width: 100%; margin-top: -12px; height: 92px; padding-left: 12px; background-color: #27292e; border: 0px;" type="message" placeholder="Your Message" name="inputMessage" rows="5" id="inputMessage"></input><br>
+			<input style="width: 100%; margin-top: -12px; height: 92px; padding-left: 12px; background-color: #27292e; border: 0px;" type="message" placeholder="Your Message" name="inputMessage" rows="5" id="inputMessage"><br>
 			<button class="button" style="vertical-align:middle; float: right;"><span>Submit </span></button><br><br><br>
-			</p>
 			</p>
 		
 			<p style="font-size: 12px; padding-left: 10%; color: gray; margin-top: -18px; background-color: #27292e; padding: 16px;">
