--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Max Zakharenko">
 		<link href="css/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-				<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>    
+		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>    
 	
     </head>
     <body>	
@@ -102,9 +102,8 @@
 			You can get in touch with me 24 hours, 7 days a week.<br><br>
 			<input style="width: 100%; height: 48px; padding-left: 12px; background-color: #27292e; border: 0px;" type="text" placeholder="Name" name="inputName" id="inputName"><br><br>
 			<input style="width: 100%; margin-top: -12px; height: 48px; padding-left: 12px; background-color: #27292e; border: 0px;" type="email" placeholder="Enter email" name="inputEmail" id="inputEmail"><br><br>
-			<input style="width: 100%; margin-top: -12px; height: 92px; padding-left: 12px; background-color: #27292e; border: 0px;" type="message" placeholder="Your Message" name="inputMessage" rows="5" id="inputMessage"></input><br>
+			<input style="width: 100%; margin-top: -12px; height: 92px; padding-left: 12px; background-color: #27292e; border: 0px;" type="message" placeholder="Your Message" name="inputMessage" rows="5" id="inputMessage"><br>
 			<button class="button" style="vertical-align:middle; float: right;"><span>Submit </span></button><br><br><br>
-			</p>
 			</p>
 		
 			<p style="font-size: 12px; padding-left: 10%; color: gray; margin-top: -18px; background-color: #27292e; padding: 16px;">
