--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,9 @@
    <meta name="keywords" content="Max Zakharenko, Max, Zakharenko, web, page, grsu, grodno, belarus, IT, android, c#, c++, java, ckeeper">
    <meta name="author" content="Max Zakharenko">
    <link href="css/style.css" rel="stylesheet">
-   <link rel="stylesheet" href="css/font-awesome.min.css">
+   <link href="style2.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/font-awesome.min.css">
    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>
    <!--<link rel="apple-touch-icon" href=".gif">-->
    <!--<link rel="shortcut icon" href=".ico">-->
