--- a/index.html
+++ b/index.html
@@ -63,9 +63,33 @@
             <h1>My story</h1>
             <p>Every year something important and sometimes pleasant happens in my life. I here want to share with you my most significant events in my life. Thanks to these events, it is possible to trace all my development as an individual and in programming.&nbsp;</p>
             <div class="timeline">
+                <div class="w-row year">
+                  <div class="w-col w-col-6 w-col-small-6">
+                     <h3 class="h-right" data-ix="from-left-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">2017</h3>
+                  </div>
+                  <div class="w-col w-col-6 w-col-small-6">
+                     <p class="p-left" data-ix="from-right-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">Employed in the EPAM Systems for the position of Junior Software Developer.</p>
+                  </div>
+               </div>
                <div class="w-row year">
                   <div class="w-col w-col-6 w-col-small-6">
-                     <p class="p-right" data-ix="from-left" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+                     <p class="p-right" data-ix="from-left" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">Successfully passed the interview for courses on android development and continued training in EPAM Systems.</p>
+                  </div>
+                  <div class="w-col w-col-6 w-col-small-6">
+                     <h3 class="h-left" data-ix="from-right" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 1000ms; -webkit-transition: opacity 500ms, transform 1000ms;">2016</h3>
+                  </div>
+               </div>
+               <div class="w-row year">
+                  <div class="w-col w-col-6 w-col-small-6">
+                     <h3 class="h-right" data-ix="from-left-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">2015</h3>
+                  </div>
+                  <div class="w-col w-col-6 w-col-small-6">
+                     <p class="p-left" data-ix="from-right-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">Entered the Grodno State University in the Faculty of Mathematics and Computer Science, specializing in information technology software.</p>
+                  </div>
+               </div>
+               <div class="w-row year">
+                  <div class="w-col w-col-6 w-col-small-6">
+                     <p class="p-right" data-ix="from-left" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">Graduated from secondary school number 27 and simultaneously began preparation for state exams.</p>
                   </div>
                   <div class="w-col w-col-6 w-col-small-6">
                      <h3 class="h-left" data-ix="from-right" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 1000ms; -webkit-transition: opacity 500ms, transform 1000ms;">2015</h3>
@@ -73,26 +97,10 @@
                </div>
                <div class="w-row year">
                   <div class="w-col w-col-6 w-col-small-6">
-                     <h3 class="h-right" data-ix="from-left-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">2014</h3>
+                     <h3 class="h-right" data-ix="from-left-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">2004</h3>
                   </div>
                   <div class="w-col w-col-6 w-col-small-6">
-                     <p class="p-left" data-ix="from-right-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-                  </div>
-               </div>
-               <div class="w-row year">
-                  <div class="w-col w-col-6 w-col-small-6">
-                     <p class="p-right" data-ix="from-left" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-                  </div>
-                  <div class="w-col w-col-6 w-col-small-6">
-                     <h3 class="h-left" data-ix="from-right" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 1000ms; -webkit-transition: opacity 500ms, transform 1000ms;">2015</h3>
-                  </div>
-               </div>
-               <div class="w-row year">
-                  <div class="w-col w-col-6 w-col-small-6">
-                     <h3 class="h-right" data-ix="from-left-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">2014</h3>
-                  </div>
-                  <div class="w-col w-col-6 w-col-small-6">
-                     <p class="p-left" data-ix="from-right-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+                     <p class="p-left" data-ix="from-right-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">First steps towards education, I started in Republic of Belarus, Grodno secondary school number 27.</p>
                   </div>
                </div>
             </div>
