font size for mobile skills

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 </div>
                 <div class="container">
                     <div class="column-4">
-                        <h1 style="margin-top: 0px;">ANDROID</h1>
-                        <h1 style="margin-top: 0px;">C++</h1>
-                        <h1 style="margin-top: 0px;">JAVA</h1>
-                        <h1 style="margin-top: 0px;">C#</h1>
+                        <h1 style="margin-top: 0px; font-size: 150%">ANDROID</h1>
+                        <h1 style="margin-top: 0px; font-size: 150%">C++</h1>
+                        <h1 style="margin-top: 0px; font-size: 150%">JAVA</h1>
+                        <h1 style="margin-top: 0px; font-size: 150%">C#</h1>
                     </div>
                 </div>
                 <div class="container">
@@ -86,11 +86,11 @@
                 </div>
                 <div class="container">
                     <div class="column-5">
-                        <p class="first-row-diagrans-text" align="middle"> ASSEMBLER </p>
-                        <p class="first-row-diagrans-text" align="middle"> HTML|JS </p>
-                        <p class="first-row-diagrans-text" align="middle"> CSS </p>
-                        <p class="first-row-diagrans-text" align="middle"> DESIGN </p>
-                        <p class="first-row-diagrans-text" align="middle"> GO </p>
+                        <p class="first-row-diagrans-text" align="middle" style="font-size: 130%"> ASSEMBLER </p>
+                        <p class="first-row-diagrans-text" align="middle" style="font-size: 130%"> HTML|JS </p>
+                        <p class="first-row-diagrans-text" align="middle" style="font-size: 130%"> CSS </p>
+                        <p class="first-row-diagrans-text" align="middle" style="font-size: 130%"> DESIGN </p>
+                        <p class="first-row-diagrans-text" align="middle" style="font-size: 130%"> GO </p>
                     </div>
                 </div>
             </div>
