--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
             <div class="w-row section">
                <div class="w-col w-col-3">
                   <a class="w-lightbox w-inline-block" href="#">
-                     <img class="lightbox" src="image/choochoo_1x.jpg" alt="choochoo_1x.jpg" data-ix="from-left-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"><script type="application/json" class="w-json">{
+                     <img class="lightbox" src="image/achievement_1.png" alt="achievement_1.png" data-ix="from-left-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"><script type="application/json" class="w-json">{
                         "items": [
                           {
                             "type": "image",
-                            "url": "image/choochoo_1x.jpg",
+                            "url": "image/achievement_1.png",
                             "width": 250,
                             "height": 250
                           }
@@ -149,11 +149,11 @@
                </div>
                <div class="w-col w-col-3">
                   <a class="w-lightbox w-inline-block" href="#">
-                     <img class="lightbox" src="image/jack-web-res_1x.jpg" alt="ack-web-res_1x.jpg" data-ix="from-left" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"><script type="application/json" class="w-json">{
+                     <img class="lightbox" src="image/achievement_2.png" alt="achievement_2.png" data-ix="from-left" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"><script type="application/json" class="w-json">{
                         "items": [
                           {
                             "type": "image",
-                            "url": "image/jack-web-res_1x.jpg",
+                            "url": "image/achievement_2.png",
                             "width": 250,
                             "height": 250
                           }
@@ -164,11 +164,11 @@
                </div>
                <div class="w-col w-col-3">
                   <a class="w-lightbox w-inline-block" href="#">
-                     <img class="lightbox" src="image/responsive_1x.jpg" alt="responsive_1x.jpg" data-ix="from-right" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 1000ms; -webkit-transition: opacity 500ms, transform 1000ms;"><script type="application/json" class="w-json">{
+                     <img class="lightbox" src="image/achievement_3.png" alt="achievement_3.png" data-ix="from-right" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 1000ms; -webkit-transition: opacity 500ms, transform 1000ms;"><script type="application/json" class="w-json">{
                         "items": [
                           {
                             "type": "image",
-                            "url": "image/responsive_1x.jpg",
+                            "url": "image/achievement_3.png",
                             "width": 250,
                             "height": 250
                           }
@@ -177,22 +177,7 @@
                      </script>
                   </a>
                </div>
-               <div class="w-col w-col-3">
-                  <a class="w-lightbox w-inline-block lightbox" href="#">
-                     <img class="lightbox" src="image/wearables_1x.jpg" alt="wearables_1x.jpg" data-ix="from-right-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"><script type="application/json" class="w-json">{
-                        "items": [
-                          {
-                            "type": "image",
-                            "url": "image/wearables_1x.jpg",
-                            "width": 400,
-                            "height": 300
-                          }
-                        ]
-                        }
-                     </script>
-                  </a>
-               </div>
-            </div>
+             </div>
          </div>
       </div>
       <div class="last-work" id="work">
