--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="header">
          <div class="w-nav nav-bg" data-collapse="small" data-animation="default" data-duration="400" data-contain="1" data-ix="display-none" style="display: block; transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms; opacity: 1; transform: translateX(0px) translateY(0px);">
             <div class="w-container nav">
-               <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link nav-link" href="#home" style="max-width: 940px;">HOME</a><a class="w-nav-link nav-link" href="#skills" style="max-width: 940px;">SKILLS</a><a class="w-nav-link nav-link" href="#story" style="max-width: 940px;">STORY</a><a class="w-nav-link nav-link" href="#hobbies" style="max-width: 940px;">HOBBIES</a><a class="w-nav-link nav-link" href="#achievements" style="max-width: 940px;">ACHIEVEMENTS</a><a class="w-nav-link nav-link" href="#projects" style="max-width: 940px;">PROJECTS</a><a class="w-nav-link nav-link w--current" href="#contact" style="max-width: 940px;">CONTACT</a></nav>
+               <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link nav-link" href="#home" style="max-width: 940px;">HOME</a><a class="w-nav-link nav-link" href="#skills" style="max-width: 940px;">SKILLS</a><a class="w-nav-link nav-link" href="#story" style="max-width: 940px;">STORY</a><a class="w-nav-link nav-link" href="#hobbies" style="max-width: 940px;">HOBBIES</a><a class="w-nav-link nav-link" href="#achievements" style="max-width: 940px;">ACHIEVEMENTS</a><a class="w-nav-link nav-link" href="#work" style="max-width: 940px;">WORK</a><a class="w-nav-link nav-link" href="#projects" style="max-width: 940px;">PROJECTS</a><a class="w-nav-link nav-link w--current" href="#contact" style="max-width: 940px;">CONTACT</a></nav>
                <div class="w-nav-button">
                   <div class="w-icon-nav-menu"></div>
                </div>
@@ -47,7 +47,7 @@
       </div>
       <div class="w-nav navbar" data-collapse="medium" data-animation="default" data-duration="400" data-contain="1">
          <div class="w-container">
-            <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link nav-link bottom" href="#home" style="max-width: 940px;">HOME</a><a class="w-nav-link nav-link bottom" href="#skills" style="max-width: 940px;">SKILLS</a><a class="w-nav-link nav-link bottom" href="#story" style="max-width: 940px;">STORY</a><a class="w-nav-link nav-link bottom" href="#hobbies" style="max-width: 940px;">HOBBIES</a><a class="w-nav-link nav-link bottom" href="#achievements" style="max-width: 940px;">ACHIEVEMENTS</a><a class="w-nav-link nav-link bottom" href="#projects" style="max-width: 940px;">PROJECTS</a><a class="w-nav-link nav-link bottom" href="#contact" style="max-width: 940px;">CONTACT</a></nav>
+            <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link nav-link bottom" href="#home" style="max-width: 940px;">HOME</a><a class="w-nav-link nav-link bottom" href="#skills" style="max-width: 940px;">SKILLS</a><a class="w-nav-link nav-link bottom" href="#story" style="max-width: 940px;">STORY</a><a class="w-nav-link nav-link bottom" href="#hobbies" style="max-width: 940px;">HOBBIES</a><a class="w-nav-link nav-link bottom" href="#achievements" style="max-width: 940px;">ACHIEVEMENTS</a><a class="w-nav-link nav-link bottom" href="#work" style="max-width: 940px;">WORK</a><a class="w-nav-link nav-link bottom" href="#projects" style="max-width: 940px;">PROJECTS</a><a class="w-nav-link nav-link bottom" href="#contact" style="max-width: 940px;">CONTACT</a></nav>
             <div class="w-nav-button">
                <div class="w-icon-nav-menu"></div>
             </div>
@@ -57,7 +57,7 @@
       <div class="portfolio" id="skills">
          <div class="w-container">
             <h1>Professional skills</h1>
-            <p>We work with great brands. Close partnerships with really cool clients let us do world-class work.</p>
+            <p>The main task of my life is to learn as many programming languages as possible, to learn many other professional opportunities in programming and not only, but also to participate in the development of the largest projects.</p>
             <div class="w-row section" style="max-width: 1000px;">
                 <div class="column-4">
                     <div>
@@ -310,29 +310,21 @@
       <div class="portfolio" id="hobbies" style="margin-bottom: 0px;">
          <div class="w-container">
             <h1>My hobbies</h1>
-            <p>We work with great brands. Close partnerships with really cool clients let us do world-class work.</p>
+            <p>I try to develop in all spheres of life, not only in programming, it allows me to develop my personality and worldview, that's why I try to participate in all youth, charity events and spend my free time with friends and colleagues at work.</p>
             <div class="w-row section">
                <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_1.png" alt="customer_1.png" data-ix="popup" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
-               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_2.png" alt="customer_2.png" data-ix="popup-2" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
-               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_3.png" alt="customer_3.png" data-ix="popup-3" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
-               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_4.png" alt="customer_4.png" data-ix="popup-4" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
-               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_6.png" alt="customer_6.png" data-ix="popup-5" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
-               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_5.png" alt="customer_5.png" data-ix="popup-6" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
-            </div>
-             <div class="w-row section">
-               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_7.png" alt="customer_7.png" data-ix="popup" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
                <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_8.png" alt="customer_8.png" data-ix="popup-2" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
                <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_9.png" alt="customer_9.png" data-ix="popup-3" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
                <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_10.png" alt="customer_10.png" data-ix="popup-4" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
-               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_11.png" alt="customer_11.png" data-ix="popup-5" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
-               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_12.png" alt="customer_12.png" data-ix="popup-6" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
+               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_7.png" alt="customer_7.png" data-ix="popup-5" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
+               <div class="w-col w-col-2 w-col-small-4"><img class="customer" src="image/customer_4.png" alt="customer_4.png" data-ix="popup-6" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"></div>
             </div>
          </div>
       </div>
       <div class="full-widh-bg responsive" id="responsive">
          <div class="w-container">
-            <h1 class="wite-center">ULTRA RESPONSIVE</h1>
-            <p class="wite-center">We work with great brands. Close partnerships with really cool clients let us do world-class work.</p>
+            <h1 class="wite-center">ANDROID SOFTWARE DEVELOPMENT</h1>
+            <p class="wite-center">Android software development is the process by which new applications are created for the Android devices operating system. Applications are usually developed in Java programming language using the Android software development kit (SDK), but other development environments are also available.</p>
          </div>
          <div class="w-container img" data-ix="from-bottom" style="transform: translateX(0px) translateY(0px); transition: transform 500ms; -webkit-transition: transform 500ms;"></div>
       </div>
@@ -341,7 +333,7 @@
             <h1>Achievements</h1>
             <p>Here lies the wall of my most significant and important in my life awards and achievements in programming, as well as in all spheres of life. Thank you to all those who were with me at these important moments for me.</p>
             <div class="w-row section">
-               <div class="w-col w-col-3">
+               <div class="w-col w-col-4">
                   <a class="w-lightbox w-inline-block" href="#">
                      <img class="lightbox" src="image/achievement_1.png" alt="achievement_1.png" data-ix="from-left-2" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"><script type="application/json" class="w-json">{
                         "items": [
@@ -356,7 +348,7 @@
                      </script>
                   </a>
                </div>
-               <div class="w-col w-col-3">
+               <div class="w-col w-col-4">
                   <a class="w-lightbox w-inline-block" href="#">
                      <img class="lightbox" src="image/achievement_2.png" alt="achievement_2.png" data-ix="from-left" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;"><script type="application/json" class="w-json">{
                         "items": [
@@ -371,7 +363,7 @@
                      </script>
                   </a>
                </div>
-               <div class="w-col w-col-3">
+               <div class="w-col w-col-4">
                   <a class="w-lightbox w-inline-block" href="#">
                      <img class="lightbox" src="image/achievement_3.png" alt="achievement_3.png" data-ix="from-right" style="opacity: 1; transform: translateX(0px) translateY(0px); transition: opacity 500ms, transform 1000ms; -webkit-transition: opacity 500ms, transform 1000ms;"><script type="application/json" class="w-json">{
                         "items": [
@@ -407,25 +399,15 @@
        <div class="portfolio" id="projects">
          <div class="w-container">
             <div class="w-row">
-               <div class="w-col w-col-3 w-col-small-6 serv" data-ix="popup" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">
-                  <div class="camera round-icon"></div>
-                  <h1>PHOTO</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;</p>
+               <div class="w-col w-col-6 w-col-small-6 serv" data-ix="popup" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">
+                  <div class="horizon round-icon"></div>
+                  <h1>Horizon Go</h1>
+                  <p>Horizon Go turns your device into a TV so you can watch your favourite shows or movies anywhere in the home.&nbsp;</p>
                </div>
-               <div class="w-col w-col-3 w-col-small-6 serv" data-ix="popup-2" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">
-                  <div class="round-icon pen"></div>
-                  <h1>DESIGN</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;</p>
-               </div>
-               <div class="w-col w-col-3 w-col-small-6 serv" data-ix="popup-3" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">
-                  <div class="round-icon seo"></div>
-                  <h1>SEO</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;</p>
-               </div>
-               <div class="w-col w-col-3 w-col-small-6 serv" data-ix="popup-4" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">
-                  <div class="round-icon coding"></div>
-                  <h1>HTML/CSS</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;</p>
+               <div class="w-col w-col-6 w-col-small-6 serv" data-ix="popup-2" style="opacity: 1; transform: scale(1); transition: opacity 500ms, transform 500ms; -webkit-transition: opacity 500ms, transform 500ms;">
+                  <div class="round-icon ckeeper"></div>
+                  <h1>CKeeper</h1>
+                  <p>An application for storing cards on a mobile device.&nbsp;</p>
                </div>
             </div>
          </div>
@@ -437,32 +419,31 @@
             <p>I can be connected with me with the help of any social network presented below. I am just as simple a person as you are and I will be very glad to meet new people.</p>
 
          </div>
-         <div class="w-container section soc centerLayer">
-           
-        <a href="https://www.youtube.com/channel/UC9Ryfyfp95ZFy-LaChPmEaw">
-            <div class="youtube social-slide"></div>
-         </a>
-         <a href="https://plus.google.com/u/0/112524692934876846449">
-            <div class="google-plus social-slide"></div>
-         </a>
-         <a href="https://www.facebook.com/profile.php?id=100012369751672">
-            <div class="facebook social-slide"></div>
-         </a>
-         <a href="https://www.linkedin.com/in/maxim-zakharenko-a7409913b/">
-            <div class="linkedin social-slide"></div>
-         </a>
-         <a href="https://vk.com/i.macs">
-            <div class="vk social-slide"></div>
-         </a>
-         <a href="https://www.instagram.com/thecriser/">
-            <div class="instagram social-slide"></div>
-         </a>
-         <a href="https://twitter.com/MaxCriser">
-            <div class="twitter social-slide"></div>
-         </a>
-        <a href="skype:alien937cycling?chat">
-            <div class="skype social-slide"></div>
-         </a>
+        <div class="w-container section soc centerLayer">
+            <a href="https://www.youtube.com/channel/UC9Ryfyfp95ZFy-LaChPmEaw">
+                <div class="youtube social-slide"></div>
+            </a>
+            <a href="https://plus.google.com/u/0/112524692934876846449">
+                <div class="google-plus social-slide"></div>
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100012369751672">
+                <div class="facebook social-slide"></div>
+            </a>
+            <a href="https://www.linkedin.com/in/maxim-zakharenko-a7409913b/">
+                <div class="linkedin social-slide"></div>
+            </a>
+            <a href="https://vk.com/i.macs">
+                <div class="vk social-slide"></div>
+            </a>
+            <a href="https://www.instagram.com/thecriser/">
+                <div class="instagram social-slide"></div>
+            </a>
+            <a href="https://twitter.com/MaxCriser">
+                <div class="twitter social-slide"></div>
+            </a>
+            <a href="skype:alien937cycling?chat">
+                <div class="skype social-slide"></div>
+            </a>
         </div>
       </div>
 
