--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <p class="wite-center">MY NAME IS</p>
             <h1 class="name"><span class="name-span">Maksim Zakharenka</span></h1>
             <div class="skils">
-               <p class="wite-center">Junior Software Engineer, student, coder</p>
+               <p class="wite-center">Software Engineering
+Track A Level 2</p>
             </div>
          </div>
          <div class="w-container"><a class="w-inline-block mouse" href="#services" data-ix="mouse" style="transition: transform 1000ms, opacity 1000ms; -webkit-transition: transform 1000ms, opacity 1000ms; opacity: 1; transform: translateX(0px) translateY(0px);"></a></div>
