--- a/index.html
+++ b/index.html
@@ -498,15 +498,14 @@
                 <div class="portfolio-filter m-30px-b">
                     <ul class="filter text-center">
                         <li class="active" data-filter="*">All</li>
-                        <li data-filter=".photoshop">Photoshop</li>
-                        <li data-filter=".website">Website</li>
                         <li data-filter=".apps">Apps</li>
+                        <li data-filter=".website">Webpages</li>
                     </ul>
                 </div> <!-- Portfolio Filter -->
 
                 <div class="portfolio-content" style="position: relative; height: 776.15px;">
                     <ul class="portfolio-cols portfolio-cols-3">
-                        <li class="portfolio-item website" style="position: absolute; left: 0px; top: 0px;">
+                        <li class="portfolio-item apps" style="position: absolute; left: 0px; top: 0px;">
                             <div class="portfolio-col portfolio-hover-01">
                                 <div class="portfolio-img">
                                     <a href="#">
@@ -584,7 +583,7 @@
                             </div> <!-- Portfolio -->
                         </li> <!-- col -->
 
-                        <li class="portfolio-item photoshop website" style="position: absolute; left: 0px; top: 388px;">
+                        <li class="portfolio-item photoshop apps" style="position: absolute; left: 0px; top: 388px;">
                             <div class="portfolio-col portfolio-hover-01">
                                 <div class="portfolio-img">
                                     <a href="#">
